| Summary: | ASTERISK-25593: fastagi: record file closed after sending result | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2015-11-25 15:00:41.000-0600 | Date Closed: | 2015-11-25 22:21:39.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_agi |
| Versions: | 11.20.0 13.6.0 | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The fastagi record-file testsuite test sometimes fails due to reporting an empty recorded file. See the following error:
{noformat} Running ['tests/fastagi/record-file/run-test'] ... Originating call to begin test which terminates recording with DTMF Recording terminated by dtmf (#) after 1920 bytes. Data was recorded, and data length matches what was reported during the DTMF test. Originating call to begin test which terminates recording with HANGUP Recording terminated by hangup (None) after 3520 bytes. The file was created, but it is empty. {noformat} | ||
| Comments: | |||